--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@ Unlocked        2/      53 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  15 branch
-  10 status
-   8 achievements
+  35 branch
+  21 status
+  12 achievements
    3 help
    2 Wed
+   1 prune
    1 config
    1 --help
 </pre>
