New achievement Apprentice Author (Level 3)

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <body>
 
 <h2>Rifat Nabi's Git Achievements <img src='http://www.gravatar.com/avatar/392ad9591d2b38dbdefc04af90ced991'/></h2>
-Unlocked        8/      53 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 25 points<br>
+Unlocked        8/      53 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 29 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
+<li><div class="title">Apprentice Author (Level 3)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Historian (Level 1)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Historian (Level 2)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Presenter (Level 1)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
@@ -26,8 +27,8 @@ Unlocked        8/      53 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
- 762 status
- 740 branch
+ 765 status
+ 742 branch
   17 achievements
   14 help
   13 checkout
@@ -37,11 +38,11 @@ Git commands sorted by usage:
    5 ignore
    4 show
    4 init
+   4 commit
    4 add
    4 !git
    3 push
    3 diff
-   3 commit
    3 Wed
    2 rm
    2 remote
