New achievement Author (Level 4)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Rifat Nabi's Git Achievements <img src='http://www.gravatar.com/avatar/392ad9591d2b38dbdefc04af90ced991'/></h2>
-Unlocked       21/      53 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 83 points<br>
+Unlocked       21/      53 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 88 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -39,6 +39,7 @@ Unlocked       21/      53 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Socialite (Level 3)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 1)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 3)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
+<li><div class="title">Author (Level 4)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Baptised</div>  <div class="info">Set global user name using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
@@ -48,32 +49,33 @@ Unlocked       21/      53 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-1615 status
+1754 status
  958 branch
- 590 symbolic-ref
- 552 rev-parse
-  27 checkout
-  21 config
+ 720 symbolic-ref
+ 682 rev-parse
+  29 checkout
+  24 config
+  21 help
   21 achievements
-  19 help
   19 diff
+  16 push
   16 ls-files
-  15 log
-  14 push
-  10 reset
+  16 log
+  12 reset
+  11 commit
   10 remote
-   9 add
-   8 commit
+  10 add
+   7 clone
    6 init
    6 clean
    5 rm
    5 ignore
-   5 clone
+   5 flow
+   5 --version
    5 !git
    4 submodule
    4 show
    4 merge
-   4 flow
    3 instaweb
    3 Wed
    2 stash
@@ -83,7 +85,6 @@ Git commands sorted by usage:
    2 fetch
    2 branchs
    2 blame
-   2 --version
    1 tag
    1 summary
    1 prune
