New achievement Apprentice Pedantic (Level 3)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Rifat Nabi's Git Achievements <img src='http://www.gravatar.com/avatar/392ad9591d2b38dbdefc04af90ced991'/></h2>
-Unlocked       21/      53 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 92 points<br>
+Unlocked       21/      53 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 96 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -31,6 +31,7 @@ Unlocked       21/      53 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Merchant (Level 1)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Pedantic (Level 1)</div>  <div class="info">Use the flow extension to encourage an orderly and standardized branching model</div></li>
 <li><div class="title">Apprentice Pedantic (Level 2)</div>  <div class="info">Use the flow extension to encourage an orderly and standardized branching model</div></li>
+<li><div class="title">Apprentice Pedantic (Level 3)</div>  <div class="info">Use the flow extension to encourage an orderly and standardized branching model</div></li>
 <li><div class="title">Apprentice Presenter (Level 1)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Apprentice Presenter (Level 2)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Apprentice Product Manager (Level 1)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
@@ -50,45 +51,46 @@ Unlocked       21/      53 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-1942 status
- 962 branch
- 883 symbolic-ref
- 845 rev-parse
-  33 checkout
+2028 status
+ 965 branch
+ 959 symbolic-ref
+ 922 rev-parse
+  34 checkout
   24 config
+  21 push
   21 help
   21 achievements
+  19 log
   19 diff
-  18 push
-  16 reset
+  17 reset
+  16 pull
   16 ls-files
-  16 log
+  15 commit
   13 remote
-  13 pull
-  13 commit
-  10 add
+  11 add
+   8 flow
    8 clone
    8 clean
    7 --version
    6 rm
    6 init
    5 ignore
-   5 flow
    5 !git
    4 submodule
    4 show
    4 merge
    3 stash
    3 instaweb
+   3 fetch
    3 Wed
    2 rebase
    2 ll
    2 gc
-   2 fetch
    2 branchs
    2 blame
    1 tag
    1 summary
+   1 reshet
    1 prune
    1 ls-remote
    1 extras
