New achievement Stone Mason (Level 5)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Rifat Nabi's Git Achievements <img src='http://www.gravatar.com/avatar/392ad9591d2b38dbdefc04af90ced991'/></h2>
-Unlocked       22/      53 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 111 points<br>
+Unlocked       22/      53 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 117 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -51,48 +51,51 @@ Unlocked       22/      53 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Stone Mason (Level 4)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
+<li><div class="title">Stone Mason (Level 5)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-2254 status
-1103 branch
-1029 symbolic-ref
- 992 rev-parse
+2298 status
+1131 branch
+1046 symbolic-ref
+1009 rev-parse
+  42 checkout
   40 config
-  40 checkout
   31 log
   24 push
-  23 help
+  24 help
   23 commit
+  22 remote
   22 diff
   21 achievements
-  20 remote
   18 reset
-  17 add
+  18 add
   16 pull
   16 ls-files
   14 flow
+  14 bisect
+   8 init
    8 clone
    8 clean
-   8 bisect
-   7 init
    7 --version
+   6 shortlog
    6 rm
    6 merge
    5 ignore
    5 !git
    4 submodule
    4 show
+   4 dropbox
    3 stash
    3 rebase
    3 instaweb
    3 fetch
+   3 blame
    3 Wed
    2 ll
    2 gc
    2 branchs
-   2 blame
    1 tag
    1 summary
    1 reshet
@@ -100,8 +103,8 @@ Git commands sorted by usage:
    1 ls-remote
    1 extras
    1 extra
-   1 dropbox
    1 count
+   1 contrib
    1 cbr
    1 alias
    1 --help
