New achievement Socialite (Level 5)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Rifat Nabi's Git Achievements <img src='http://www.gravatar.com/avatar/392ad9591d2b38dbdefc04af90ced991'/></h2>
-Unlocked       22/      53 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 126 points<br>
+Unlocked       22/      53 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 132 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -52,37 +52,39 @@ Unlocked       22/      53 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Historian (Level 5)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
+<li><div class="title">Socialite (Level 5)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Stone Mason (Level 4)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Stone Mason (Level 5)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-2401 status
-1139 symbolic-ref
-1135 branch
-1103 rev-parse
-  48 checkout
+2446 status
+1178 symbolic-ref
+1142 rev-parse
+1136 branch
+  50 checkout
   40 config
-  31 log
-  27 commit
-  24 push
+  34 log
+  28 push
+  28 commit
   24 help
   23 diff
   22 remote
+  21 add
   21 achievements
-  20 add
+  19 flow
   18 reset
   17 pull
-  17 flow
   16 ls-files
+  14 rm
   14 bisect
    9 clone
    8 init
    8 clean
    8 --version
+   7 tag
    6 shortlog
-   6 rm
    6 merge
    5 ignore
    5 !git
@@ -98,7 +100,6 @@ Git commands sorted by usage:
    2 ll
    2 gc
    2 branchs
-   1 tag
    1 summary
    1 show-ref
    1 reshet
