New achievement Apprentice Merchant (Level 2)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Rifat Nabi's Git Achievements <img src='http://www.gravatar.com/avatar/392ad9591d2b38dbdefc04af90ced991'/></h2>
-Unlocked       22/      53 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 132 points<br>
+Unlocked       22/      53 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 135 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -33,6 +33,7 @@ Unlocked       22/      53 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Hunter (Level 3)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bisect.html">git-bisect</a> to perform a binary search to find which change introduced a bug.</div></li>
 <li><div class="title">Apprentice Investigator (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-blame.html">git-blame</a> to annotate a file with information about how each line changed.</div></li>
 <li><div class="title">Apprentice Merchant (Level 1)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
+<li><div class="title">Apprentice Merchant (Level 2)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Pedantic (Level 1)</div>  <div class="info">Use the flow extension to encourage an orderly and standardized branching model</div></li>
 <li><div class="title">Apprentice Pedantic (Level 2)</div>  <div class="info">Use the flow extension to encourage an orderly and standardized branching model</div></li>
 <li><div class="title">Apprentice Pedantic (Level 3)</div>  <div class="info">Use the flow extension to encourage an orderly and standardized branching model</div></li>
@@ -59,19 +60,19 @@ Unlocked       22/      53 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-2446 status
-1178 symbolic-ref
-1142 rev-parse
+2464 status
+1196 symbolic-ref
+1160 rev-parse
 1136 branch
   50 checkout
   40 config
   34 log
-  28 push
-  28 commit
-  24 help
+  30 push
+  29 commit
+  27 remote
+  25 help
   23 diff
-  22 remote
-  21 add
+  22 add
   21 achievements
   19 flow
   18 reset
@@ -79,8 +80,8 @@ Git commands sorted by usage:
   16 ls-files
   14 rm
   14 bisect
+   9 init
    9 clone
-   8 init
    8 clean
    8 --version
    7 tag
