New achievement Apprentice Collector (Level 2)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Rifat Nabi's Git Achievements <img src='http://www.gravatar.com/avatar/392ad9591d2b38dbdefc04af90ced991'/></h2>
-Unlocked       23/      53 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 143 points<br>
+Unlocked       23/      53 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 146 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -24,6 +24,7 @@ Unlocked       23/      53 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Cleaning lady (Level 2)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Apprentice Cleaning lady (Level 3)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Apprentice Collector (Level 1)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
+<li><div class="title">Apprentice Collector (Level 2)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Goldsmith (Level 1)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
 <li><div class="title">Apprentice Historian (Level 1)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Historian (Level 2)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
@@ -63,29 +64,29 @@ Unlocked       23/      53 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-2501 status
-1231 symbolic-ref
-1195 rev-parse
-1136 branch
+2507 status
+1236 symbolic-ref
+1197 rev-parse
+1140 branch
   50 checkout
-  42 push
+  43 push
   40 config
   34 log
   32 commit
-  27 remote
+  29 remote
   25 help
   24 add
   23 diff
   21 achievements
+  19 reset
   19 flow
-  18 reset
   17 tag
   17 pull
   16 ls-files
   14 rm
   14 bisect
+  10 clone
    9 init
-   9 clone
    8 clean
    8 --version
    6 shortlog
@@ -95,10 +96,10 @@ Git commands sorted by usage:
    4 submodule
    4 show
    4 rebase
+   4 fetch
    4 dropbox
    3 stash
    3 instaweb
-   3 fetch
    3 blame
    3 Wed
    2 ll
